<resources>
    <string name="app_name">Mines</string>
    <string name="beginner_level">Beginner</string>
    <string name="normal_level">Normal</string>
    <string name="expert_level">Expert</string>
    <string name="start_button">Start</string>
    <string name="highScore_button">High Scores</string>
    <string name="highScore_beginner_title">High Scores - Beginner</string>
    <string name="highScore_normal_title">High Scores - Normal</string>
    <string name="highScore_expert_title">High Scores - Expert</string>
    <string name="highScore_table_rb">Table View</string>
    <string name="highScore_map_rb">Map View</string>
    <string name="game_press_back_alert">Press back again to close the game</string>
    <string name="main_press_back_alert">Press back again to exit</string>
    <string name="you_win">You Win!</string>
    <string name="you_lose">You Lose!</string>
    <string name="score">Score:</string>
    <string name="time">Time:</string>
    <string name="play_again">Play Again</string>
    <string name="finish">Finish</string>
    <string name="enter_to_high_score">Enter Your Record</string>



    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="done">Done</string>
    <string name="not_done">Not Done</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
